--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello Again React >.>!</title>
+    <!-- Auth0Lock script -->
+    <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
+
+    <!-- Setting the right viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
     <div id="content"></div>
