--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gamify Education</title>
+    <link href="./css/mathquill.css" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
     <link href="./assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="./assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
@@ -27,12 +28,13 @@
     <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white page-md">
-    
+
     <div id="content"></div>
 
-    <script src="/build/app.bundle.js" type="text/javascript"></script>
-    <!-- BEGIN CORE PLUGINS -->
     <script src="./assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+    <script src="/build/app.bundle.js" type="text/javascript"></script>
+    <script src="./js/mathquill.min.js" type="text/javascript"></script>
+    <!-- BEGIN CORE PLUGINS -->
     <script src="./assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
     <script src="./assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
