--- a/GamifyGame/index.html
+++ b/GamifyGame/index.html
@@ -14,6 +14,21 @@
         body {
             margin: 0;
             padding: 0;
+            height: 100%;
+        }
+
+        #content {
+            display: flex;
+            align-items: center;
+            height: 100%;
+            background: #B6D9E7;
+            margin: auto;
+            width: 100%;
+        }
+
+        canvas {
+            margin: auto;
+            border-radius:5px;
         }
     </style>
 </head>
@@ -21,7 +36,7 @@
 <body>
 
     <div id="content"></div>
-    
+
     <script src="dist/bundle.js"></script>
 
 </body>
